# Fast-Food-Portal

./: LICENSE  README.md
.github/workflows/: server.yml
front-end/: checkout.html  combos.html  index.html  index1.html  ordering.html
front-end/css/: checkout.css  draggable.css
front-end/css/checkout/: checkout.css  draggable.css
front-end/css/combos/: combos.css
front-end/css/ordering/: checkout.css  ordering.css
front-end/js/: checkout.js  combos.js  draggable.js  ordering.js
server/: Cargo.toml  Dockerfile
server/src/: graphql.rs  main.rs  routes.rs
server/src/db/: schema.rs
