[package]
name = "pets-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
async-graphql = { version = "4", features = ["chrono"] }
async-graphql-axum = "4"
pbkdf2 = "0.11"
clap = { version = "3.2", features = ["derive", "env"] }
chrono = "0.4"
jsonwebtoken = "8"
mongodb = { version = "2.3", features = ["bson-chrono-0_4"]}
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3" 
tokio = { version = "1.20", features = ["full"] }
