[package]
name = "foodportal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
clap = { version = "3.2", features = ["derive", "env"] }
chrono = "0.4"
futures = "0.3"
mongodb = { version = "2.3", features = ["bson-chrono-0_4"]}
once_cell = "1.15"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-futures = "*"
tokio = { version = "1.20", features = ["full"] }
